Fixed vertical alignment of banner link

--- a/app/assets/stylesheets/partials/_navigation.sass
+++ b/app/assets/stylesheets/partials/_navigation.sass
@@ -56,6 +56,7 @@ nav
 
         > .min-container
             padding: 1rem
+            position: relative
 
             h1.page-title
                 margin: 0
@@ -67,13 +68,18 @@ nav
                 display: inline-block
 
             #banner-link
-                float: right
+                @extend .vertical-centre
+                right: 0
 
-                > a.new
+                > a
                     background-color: rgba(0, 0, 0, 0.14)
                     border-radius: 5px
                     padding: 12px
                     box-shadow: inset 0px 0px 5px -3px black
+
+                    -webkit-transition: background-color 200ms ease
+                    -o-transition: background-color 200ms ease
+                    transition: background-color 200ms ease
 
                     span
                         font-family: Roboto
@@ -81,3 +87,5 @@ nav
                         font-size: 13px
                         line-height: 13px
 
+                    &:hover
+                        background-color: rgba(0, 0, 0, 0.20)
